--- a/index.html
+++ b/index.html
@@ -2,187 +2,175 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Age Calculator</title>
+<title>My Code Projects</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-/* ===== RESET ===== */
 *{
   margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family: "Poppins", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "Fira Code", monospace;
 }
 
-/* ===== BACKGROUND ANIMATION ===== */
 body{
   min-height:100vh;
+  background: linear-gradient(120deg,#0f2027,#203a43,#2c5364);
   display:flex;
   justify-content:center;
   align-items:center;
-  background: linear-gradient(120deg,#0f2027,#203a43,#2c5364);
-  background-size: 400% 400%;
-  animation: gradientMove 12s ease infinite;
+  color:white;
+}
+
+.app{
+  width:95%;
+  max-width:1000px;
+  height:600px;
+  background: rgba(0,0,0,0.4);
+  border-radius:16px;
+  display:grid;
+  grid-template-columns: 260px 1fr;
   overflow:hidden;
-}
-
-@keyframes gradientMove{
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
-}
-
-/* ===== FLOATING BLOBS ===== */
-.blob{
-  position:absolute;
-  width:280px;
-  height:280px;
-  background: linear-gradient(135deg,#00ffd5,#0077ff);
-  filter: blur(90px);
-  opacity:0.45;
-  animation: float 10s infinite alternate ease-in-out;
-}
-.blob.one{ top:-80px; left:-80px; }
-.blob.two{ bottom:-100px; right:-80px; animation-delay:2s; }
-
-@keyframes float{
-  from{ transform: translateY(0px);}
-  to{ transform: translateY(60px);}
-}
-
-/* ===== CARD ===== */
-.card{
-  position:relative;
-  width:340px;
-  padding:28px;
-  border-radius:18px;
-  background: rgba(255,255,255,0.12);
   backdrop-filter: blur(14px);
-  -webkit-backdrop-filter: blur(14px);
-  border: 1px solid rgba(255,255,255,0.25);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-  animation: cardIn 1s ease forwards;
 }
 
-@keyframes cardIn{
-  from{ opacity:0; transform: translateY(30px) scale(0.95);}
-  to{ opacity:1; transform: translateY(0) scale(1);}
+/* SIDEBAR */
+.sidebar{
+  background: rgba(0,0,0,0.55);
+  padding:15px;
+  display:flex;
+  flex-direction:column;
 }
 
-/* ===== TEXT ===== */
-h1{
-  text-align:center;
-  font-size:1.6rem;
-  color:#fff;
-  margin-bottom:18px;
+.sidebar h2{
+  font-size:1rem;
+  margin-bottom:10px;
 }
 
-label{
-  display:block;
-  color:#dff;
-  font-size:0.9rem;
-  margin-bottom:6px;
-}
-
-/* ===== INPUT ===== */
-input{
-  width:100%;
-  padding:12px;
+.sidebar button{
+  padding:10px;
+  border:none;
   border-radius:10px;
+  font-weight:bold;
+  cursor:pointer;
+  background: linear-gradient(135deg,#00ffd5,#00b3ff);
+  margin-bottom:10px;
+}
+
+.project-list{
+  flex:1;
+  overflow:auto;
+}
+
+.project{
+  padding:8px;
+  border-radius:8px;
+  background: rgba(255,255,255,0.1);
+  margin-bottom:6px;
+  cursor:pointer;
+}
+
+.project:hover{
+  background: rgba(0,255,213,0.3);
+}
+
+/* EDITOR */
+.editor{
+  display:flex;
+  flex-direction:column;
+}
+
+.editor-header{
+  padding:12px;
+  background: rgba(0,0,0,0.6);
+  font-size:0.9rem;
+}
+
+textarea{
+  flex:1;
   border:none;
   outline:none;
-  font-size:1rem;
-  background: rgba(255,255,255,0.85);
+  resize:none;
+  padding:15px;
+  background:#0d1117;
+  color:#c9d1d9;
+  font-size:0.9rem;
 }
 
-/* ===== BUTTON ===== */
-button{
-  width:100%;
-  margin-top:16px;
-  padding:12px;
-  border:none;
-  border-radius:12px;
-  font-size:1rem;
-  font-weight:600;
-  color:#003;
-  background: linear-gradient(135deg,#00ffd5,#00b3ff);
-  cursor:pointer;
-  transition: transform .2s ease, box-shadow .2s ease;
-}
-
-button:hover{
-  transform: translateY(-2px);
-  box-shadow: 0 10px 25px rgba(0,255,213,0.4);
-}
-
-button:active{
-  transform: scale(0.97);
-}
-
-/* ===== RESULT ===== */
-#result{
-  margin-top:16px;
-  text-align:center;
-  font-size:0.95rem;
-  color:#fff;
-  opacity:0;
-  transform: translateY(10px);
-  transition: all .4s ease;
-}
-
-#result.show{
-  opacity:1;
-  transform: translateY(0);
+.status{
+  padding:8px;
+  font-size:0.75rem;
+  background:#080b10;
+  color:#7ee787;
 }
 </style>
 </head>
 
 <body>
 
-<div class="blob one"></div>
-<div class="blob two"></div>
+<div class="app">
 
-<div class="card">
-  <h1>Age Calculator</h1>
+  <!-- SIDEBAR -->
+  <div class="sidebar">
+    <h2>My Projects</h2>
+    <button onclick="newProject()">＋ New Project</button>
+    <div class="project-list" id="projectList"></div>
+  </div>
 
-  <label>Date of Birth</label>
-  <input type="date" id="dob">
+  <!-- EDITOR -->
+  <div class="editor">
+    <div class="editor-header" id="projectTitle">
+      No project opened
+    </div>
+    <textarea id="editor" placeholder="Write your code here..."></textarea>
+    <div class="status" id="status">Not saved</div>
+  </div>
 
-  <button onclick="calculateAge()">Calculate Age</button>
-
-  <p id="result"></p>
 </div>
 
 <script>
-function calculateAge(){
-  const dobInput = document.getElementById("dob");
-  const result = document.getElementById("result");
+let currentProject = null;
 
-  if(!dobInput.value){
-    result.textContent = "Please select your birth date.";
-    result.classList.add("show");
-    return;
+function loadProjects(){
+  const list = document.getElementById("projectList");
+  list.innerHTML = "";
+  const projects = JSON.parse(localStorage.getItem("projects") || "{}");
+
+  for(const name in projects){
+    const div = document.createElement("div");
+    div.className = "project";
+    div.textContent = name;
+    div.onclick = () => openProject(name);
+    list.appendChild(div);
   }
-
-  const birthDate = new Date(dobInput.value);
-  const today = new Date();
-
-  let years = today.getFullYear() - birthDate.getFullYear();
-  let months = today.getMonth() - birthDate.getMonth();
-  let days = today.getDate() - birthDate.getDate();
-
-  if(days < 0){
-    months--;
-    days += 30;
-  }
-  if(months < 0){
-    years--;
-    months += 12;
-  }
-
-  result.textContent = `You are ${years} years, ${months} months & ${days} days old`;
-  result.classList.add("show");
 }
+
+function newProject(){
+  const name = prompt("Project name?");
+  if(!name) return;
+
+  const projects = JSON.parse(localStorage.getItem("projects") || "{}");
+  projects[name] = "";
+  localStorage.setItem("projects", JSON.stringify(projects));
+  loadProjects();
+}
+
+function openProject(name){
+  const projects = JSON.parse(localStorage.getItem("projects") || "{}");
+  currentProject = name;
+  document.getElementById("projectTitle").textContent = "Project: " + name;
+  document.getElementById("editor").value = projects[name];
+}
+
+document.getElementById("editor").addEventListener("input", () => {
+  if(!currentProject) return;
+  const projects = JSON.parse(localStorage.getItem("projects") || "{}");
+  projects[currentProject] = document.getElementById("editor").value;
+  localStorage.setItem("projects", JSON.stringify(projects));
+  document.getElementById("status").textContent = "Saved ✔";
+});
+
+loadProjects();
 </script>
 
 </body>
