Refactor game logic and add joystick support

--- a/index.html
+++ b/index.html
@@ -3,34 +3,51 @@
 <head>
 <title>Night Runner</title>
 </head>
-<body style="text-align:center;background:#ddd;">
+<body style="margin:0;overflow:hidden;background:#222;">
 
-<h2 id="info">Day Time - Collect Coins</h2>
+<h3 id="info" style="color:white;text-align:center;">Day Time - Collect Coins</h3>
 
-<canvas id="game" width="800" height="400" style="border:3px solid black;background:#7ec850;"></canvas>
+<canvas id="game" width="800" height="400" style="background:#7ec850;display:block;margin:auto;"></canvas>
+
+<canvas id="joy" width="200" height="200" style="position:fixed;bottom:10px;left:10px;"></canvas>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 const info = document.getElementById("info");
 
-let player = { x:50, y:200, size:20, speed:4 };
-let coins = [];
-let monsters = [];
-let day = true;
-let time = 0;
-let score = 0;
+const joy = document.getElementById("joy");
+const jctx = joy.getContext("2d");
 
-for(let i=0;i<5;i++){
-  coins.push({x:Math.random()*760, y:Math.random()*360});
-}
+let player={x:50,y:200,size:20,speed:3};
+let coins=[], monsters=[];
+let day=true, time=0, score=0;
 
-document.addEventListener("keydown",e=>{
-  if(e.key=="w") player.y -= player.speed;
-  if(e.key=="s") player.y += player.speed;
-  if(e.key=="a") player.x -= player.speed;
-  if(e.key=="d") player.x += player.speed;
+// joystick
+let joyX=100, joyY=100, touch=false;
+
+for(let i=0;i<5;i++) coins.push({x:Math.random()*760,y:Math.random()*360});
+
+joy.addEventListener("touchstart",e=>{touch=true;});
+joy.addEventListener("touchend",e=>{touch=false; joyX=100; joyY=100;});
+joy.addEventListener("touchmove",e=>{
+  let rect=joy.getBoundingClientRect();
+  joyX=e.touches[0].clientX-rect.left;
+  joyY=e.touches[0].clientY-rect.top;
 });
+
+function drawJoy(){
+  jctx.clearRect(0,0,200,200);
+  jctx.beginPath();
+  jctx.arc(100,100,50,0,Math.PI*2);
+  jctx.strokeStyle="white";
+  jctx.stroke();
+
+  jctx.beginPath();
+  jctx.arc(joyX,joyY,20,0,Math.PI*2);
+  jctx.fillStyle="white";
+  jctx.fill();
+}
 
 function spawnMonster(){
   monsters.push({x:800,y:Math.random()*360,size:20});
@@ -38,25 +55,31 @@ function spawnMonster(){
 
 function loop(){
   ctx.clearRect(0,0,800,400);
+  drawJoy();
+
+  // move by joystick
+  let dx=joyX-100;
+  let dy=joyY-100;
+  player.x += dx*0.05;
+  player.y += dy*0.05;
 
   time++;
-  if(time > 600){
-    day = !day;
-    time = 0;
+  if(time>600){
+    day=!day; time=0;
     if(day){
-      info.innerText = "Day Time - Collect Coins";
-      monsters = [];
+      info.innerText="Day Time - Collect Coins";
+      monsters=[];
       canvas.style.background="#7ec850";
     }else{
-      info.innerText = "Night Time - Survive!";
+      info.innerText="Night Time - Survive!";
       canvas.style.background="#111";
       spawnMonster();
     }
   }
 
   // Player
-  ctx.fillStyle="blue";
-  ctx.fillRect(player.x,player.y,player.size,player.size);
+  ctx.fillStyle="cyan";
+  ctx.fillRect(player.x,player.y,20,20);
 
   // Coins
   if(day){
@@ -75,21 +98,19 @@ function loop(){
   if(!day){
     ctx.fillStyle="red";
     for(let m of monsters){
-      m.x -= 2;
-      ctx.fillRect(m.x,m.y,m.size,m.size);
+      m.x-=2;
+      ctx.fillRect(m.x,m.y,20,20);
       if(Math.abs(player.x-m.x)<20 && Math.abs(player.y-m.y)<20){
         alert("Game Over! Score: "+score);
         location.reload();
       }
     }
-    if(time % 120 == 0) spawnMonster();
+    if(time%120==0) spawnMonster();
   }
 
   requestAnimationFrame(loop);
 }
-
 loop();
 </script>
-
 </body>
 </html>
